--- a/Curso spring security 1/3865-seguranca-java-aula-01/src/main/resources/templates/autenticacao/login.html
+++ b/Curso spring security 1/3865-seguranca-java-aula-01/src/main/resources/templates/autenticacao/login.html
@@ -36,6 +36,11 @@
                     <input id="password" name="password" type="password" class="form-control" required="required">
                 </div>
 
+                <div class="form-group">
+                    <label for="remember-me" class="required">Lembrar de mim:</label>
+                    <input id="remember-me" name="remember-me" type="checkbox" class="form-control">
+                </div>
+
                 <button class="btn btn-primary" title="Entrar">
                     Entrar
                 </button>
