--- a/Curso spring security 1/3865-seguranca-java-aula-01/src/main/resources/templates/componentes/_menu.html
+++ b/Curso spring security 1/3865-seguranca-java-aula-01/src/main/resources/templates/componentes/_menu.html
@@ -1,4 +1,4 @@
-<header class="header" xmlns:th="http://thymeleaf.org" th:fragment="menu">
+<header class="header" xmlns:th="http://thymeleaf.org" th:fragment="menu" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" >
     <div class="container header-container">
         <a href="../index.html" th:href="@{/}" class="logo">
             <img src="../../static/assets/logo.png" th:src="@{/assets/logo.png}" alt="Logo Voll">
@@ -20,8 +20,17 @@
                 </li>
             </ul>
             </ul>
-            <ul>
-                <a href="/logout" th:href="@{/logout}">Logout</a>
+            <ul class="nav-right">
+                <li class="dropdown">
+                    <a href="#">Olá, <span sec:authentication="principal.nome"></span> <i class="arrow-down"></i></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <form class="navbar-form" th:action="@{/logout}" method="post">
+                                <button class="btn-link">SAIR</button>
+                            </form>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </nav>
         </nav>
